[gd_scene load_steps=23 format=3 uid="uid://bcta11veyqw8p"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ieoqc"]
[ext_resource type="Texture2D" uid="uid://b55qqlm2hv0cj" path="res://assets/Warrior_Blue.png" id="1_vimuw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rnup7"]
atlas = ExtResource("1_vimuw")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_80pt2"]
atlas = ExtResource("1_vimuw")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xe3f8"]
atlas = ExtResource("1_vimuw")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tb0w2"]
atlas = ExtResource("1_vimuw")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dufel"]
atlas = ExtResource("1_vimuw")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqs5d"]
atlas = ExtResource("1_vimuw")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4i73j"]
atlas = ExtResource("1_vimuw")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7h20q"]
atlas = ExtResource("1_vimuw")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf7oj"]
atlas = ExtResource("1_vimuw")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3rcf"]
atlas = ExtResource("1_vimuw")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_beyis"]
atlas = ExtResource("1_vimuw")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mtkj"]
atlas = ExtResource("1_vimuw")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xrnw"]
atlas = ExtResource("1_vimuw")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4vot"]
atlas = ExtResource("1_vimuw")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nly70"]
atlas = ExtResource("1_vimuw")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kerpe"]
atlas = ExtResource("1_vimuw")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3u2s"]
atlas = ExtResource("1_vimuw")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_s67kx"]
atlas = ExtResource("1_vimuw")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_gm2ue"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnup7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80pt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xe3f8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tb0w2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dufel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqs5d")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i73j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7h20q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gf7oj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3rcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_beyis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mtkj")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xrnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4vot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nly70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kerpe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3u2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s67kx")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f3nbu"]
size = Vector2(302, 117)

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(9, 10)
collision_layer = 2
script = ExtResource("1_ieoqc")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_gm2ue")
animation = &"attack"
autoplay = "idle"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0, -10)
polygon = PackedVector2Array(6, -28, 12, -25, 16, -15, 18, -3, 19, 2, 24, 2, 35, -19, 43, -27, 44, -12, 33, 9, 38, 13, 35, 18, 29, 21, 26, 25, 21, 25, 20, 27, 16, 27, 8, 32, -9, 32, -17, 35, -33, 19, -33, -9, -28, -10, -19, -4, -20, -12, -16, -24, -10, -28)

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(0, -10)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(186, -20.5)
shape = SubResource("RectangleShape2D_f3nbu")
debug_color = Color(0.819608, 0, 0.141176, 0.4)

[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animation_frame_changed"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
